--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         </section>
         <h2>Videos 🎥</h2>
         <section class="videos">
-           
+           <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/91qXQXwwWd8?si=rAKZBz7z75W4iMDx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+           </div>
+           <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mASSJNRd_jI?si=7U9kgXMeaA3cJ5dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+           </div>
         </section>
         <section class="final">
             <p>Encorajar as crianças a expressarem seus medos é o primeiro passo para ajudá-las a superá-los 🗡️.</p>
